tests/NormalTests/paczka1/fuzzy1/82972856.err
Error in line 1: 6Js A604 6,8
Error in line 3: 6Js S313 18,4
Error in line 2: 2VSXhbPEJ S491 1,8
Error in line 16: S313 A604 37,2
Error in line 29: E1cVGst6L S491 4,5
